--- a/frontend/src/app/components/user-infos/user-infos.component.html
+++ b/frontend/src/app/components/user-infos/user-infos.component.html
@@ -53,9 +53,24 @@
                     <button class="user-infos__delete-button">X</button>
                 </div>
             </div> -->
+
+            <div class="user-infos__alert-message">
+                @if(userInfosForm.invalid) {
+                    @if(userInfosForm.hasError('update-success')) {
+                        <p class="poppins-semibold user-infos__alert-message--success">Usuário atualizado com sucesso</p>
+                    }
+                    @if(userInfosForm.hasError('update-error')) {
+                        <p class="poppins-semibold user-infos__alert-message--error">Falha ao atualizar o usuário. Tente novamente.</p>
+                    }
+
+                }
+            </div>
+
             <div class="user-infos__buttons-container">
                 <button type="button" class="poppins-regular user-infos__send-button user-infos__send-button--create">Criar Usuário</button>
-                <button type="button" class="poppins-regular user-infos__send-button user-infos__send-button--update">Atualizar Existente</button>
+                <button type="button"
+                 class="poppins-regular user-infos__send-button user-infos__send-button--update"
+                 (click)="updateUser()">Atualizar Existente</button>
             </div>
         </form>
     </div>
