--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,6 @@
 <router-outlet></router-outlet>
+@if(_loadingService.loading$ | async){
+    <div class="spinner-container">
+        <div class="spinner"></div>
+    </div>
+}
